--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.6.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
